--- a/src/css/style.css
+++ b/src/css/style.css
@@ -32,7 +32,7 @@ main{
 }
 
 .logo, .button-img{
-    width: 60px;
+    width: 80px;
 }
 
 #theme-button{
@@ -63,7 +63,8 @@ main{
 
 .types{
     display: flex;
-    gap: 15px;
+    justify-content: space-between;
+    gap: 10px;
 }
 
 .grass-type{
