--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,6 +14,8 @@
 body{
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    height: 100vh;
 
     font-family: 'Poppins', sans-serif;
 
@@ -29,6 +31,22 @@ header{
     justify-content: space-between;
 
     padding: 25px;
+}
+
+footer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+    margin-top: 1.5rem;
+    padding: 0.5rem;
+
+    height: 3rem;
+
+    background: var(--red);
+    box-shadow: 0px 10px 40px var(--red);
+
+    color: var(--white);
 }
 
 .poke-list{
@@ -78,6 +96,22 @@ header{
     padding-right: 10px;
 
     overflow-y: scroll; /* adiciona um scrool caso ultrapasse a altura */
+}
+
+.social-medias{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    gap: 0.5rem;
+}
+
+.social-medias-link{
+    display: flex;
+    align-items: center;
+}
+
+.social-medias-icons{
+    height: 1.5rem;
 }
 /* ===== Scrollbar CSS ===== */
 *::-webkit-scrollbar {
