--- a/src/css/themes.css
+++ b/src/css/themes.css
@@ -28,3 +28,9 @@
     background-color: var(--purple);
     border: 3px solid var(--medium-dark);
 }
+
+.dark footer{
+    background: var(--purple);
+    color: var(--dark);
+    box-shadow: 0px 10px 40px var(--purple);
+}
