--- a/src/css/types.css
+++ b/src/css/types.css
@@ -24,7 +24,7 @@
     transition: 0.2s ease-in;
 }
 
-.grass-type, .poison-type, .fire-type, .flying-type, .water-type, .bug-type, .dragon-type, .normal-type{
+.grass-type, .poison-type, .fire-type, .flying-type, .water-type, .bug-type, .dragon-type, .normal-type, .psychic-type{
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -125,4 +125,9 @@
 /* normal */
 .normal-type{
     background: #B7B7A8;
+}
+
+/* .psychic */
+.psychic-type{
+    background: #FF6EA8;
 }
