--- a/src/css/types.css
+++ b/src/css/types.css
@@ -24,7 +24,8 @@
     transition: 0.2s ease-in;
 }
 
-.grass-type, .poison-type, .fire-type, .flying-type, .water-type, .bug-type, .dragon-type, .normal-type, .psychic-type{
+.grass-type, .poison-type, .fire-type, .flying-type, .water-type, .bug-type, .dragon-type, .normal-type, .psychic-type,
+.fighting-type, .dark-type, .rock-type{
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -130,4 +131,19 @@
 /* .psychic */
 .psychic-type{
     background: #FF6EA8;
+}
+
+/* fighting */
+.fighting-type{
+    background: #C56E60;
+}
+
+/* dark */
+.dark-type{
+    background: #8B6E60;
+}
+
+/* rock */
+.rock-type{
+    background: #C5B77D;
 }
