--- a/src/css/types.css
+++ b/src/css/types.css
@@ -9,7 +9,7 @@
     height: 15px;
 }
 
-.fire-poke-card, .water-poke-card, .grass-poke-card, .bug-poke-card, .flying-poke-card{
+.fire-poke-card, .water-poke-card, .grass-poke-card, .bug-poke-card, .flying-poke-card, .normal-poke-card{
     width: 200px;
     padding: 5px;
 
@@ -36,7 +36,8 @@
 }
 
 /* hover dos cards */
-.fire-poke-card:hover, .water-poke-card:hover, .grass-poke-card:hover, .bug-poke-card:hover, .flying-poke-card:hover{
+.fire-poke-card:hover, .water-poke-card:hover, .grass-poke-card:hover, .bug-poke-card:hover, .flying-poke-card:hover,
+.normal-poke-card:hover{
     transform: scale(1.05);
     cursor: pointer;
 }
@@ -124,6 +125,16 @@
 }
 
 /* normal */
+.normal-poke-card{
+    background: url(../images/backgrounds/normal-background-fixed.png) center center;
+    background-size: cover;
+}
+
+.normal-poke-card:hover{
+    background: url(../images/backgrounds/normal-background.gif) center center;
+    background-size: cover;
+}
+
 .normal-type{
     background: #B7B7A8;
 }
