--- a/src/css/types.css
+++ b/src/css/types.css
@@ -9,7 +9,8 @@
     height: 15px;
 }
 
-.fire-poke-card, .water-poke-card, .grass-poke-card, .bug-poke-card, .flying-poke-card, .normal-poke-card, .dark-poke-card{
+.fire-poke-card, .water-poke-card, .grass-poke-card, .bug-poke-card, .flying-poke-card, .normal-poke-card, .dark-poke-card,
+.poison-poke-card{
     width: 200px;
     padding: 5px;
 
@@ -25,19 +26,19 @@
 }
 
 .grass-type, .poison-type, .fire-type, .flying-type, .water-type, .bug-type, .dragon-type, .normal-type, .psychic-type,
-.fighting-type, .dark-type, .rock-type{
+.fighting-type, .dark-type, .rock-type, .ground-type{
     display: flex;
     align-items: center;
     justify-content: space-between;
     gap: 5px;
 
-    padding: 8px;
+    padding: 6px;
     border-radius: 10px;
 }
 
 /* hover dos cards */
 .fire-poke-card:hover, .water-poke-card:hover, .grass-poke-card:hover, .bug-poke-card:hover, .flying-poke-card:hover,
-.normal-poke-card:hover, .dark-poke-card:hover{
+.normal-poke-card:hover, .dark-poke-card:hover, .poison-poke-card:hover{
     transform: scale(1.05);
     cursor: pointer;
 }
@@ -58,6 +59,15 @@
 }
 
 /* poison type */
+.poison-poke-card{
+    background: url(../images/backgrounds/poison-background-fixed.png) center center;
+    background-size: cover;
+}
+
+.poison-poke-card:hover{
+    background: url(../images/backgrounds/poison-background.gif) center center;
+    background-size: cover;
+}
 .poison-type{
     background: #df67ddfb;
 }
@@ -167,4 +177,9 @@
 /* rock */
 .rock-type{
     background: #C5B77D;
+}
+
+/* ground */
+.ground-type{
+    background: #E2C56E;
 }
