--- a/src/css/types.css
+++ b/src/css/types.css
@@ -10,7 +10,7 @@
 }
 
 .fire-poke-card, .water-poke-card, .grass-poke-card, .bug-poke-card, .flying-poke-card, .normal-poke-card, .dark-poke-card,
-.poison-poke-card, .electric-poke-card, .ghost-poke-card{
+.poison-poke-card, .electric-poke-card, .ghost-poke-card, .ground-poke-card{
     width: 200px;
     padding: 5px;
 
@@ -38,7 +38,8 @@
 
 /* hover dos cards */
 .fire-poke-card:hover, .water-poke-card:hover, .grass-poke-card:hover, .bug-poke-card:hover, .flying-poke-card:hover,
-.normal-poke-card:hover, .dark-poke-card:hover, .poison-poke-card:hover, .electric-poke-card:hover, .ghost-poke-card:hover{
+.normal-poke-card:hover, .dark-poke-card:hover, .poison-poke-card:hover, .electric-poke-card:hover, .ghost-poke-card:hover,
+.ground-poke-card {
     transform: scale(1.05);
     cursor: pointer;
 }
@@ -180,6 +181,16 @@
 }
 
 /* ground */
+.ground-poke-card{
+    background: url(../images/backgrounds/ground-background-fixed.png) center center;
+    background-size: cover;
+}
+
+.ground-poke-card:hover{
+    background: url(../images/backgrounds/ground-background.gif) center center;
+    background-size: cover;
+}
+
 .ground-type{
     background: #E2C56E;
 }
