--- a/src/css/types.css
+++ b/src/css/types.css
@@ -10,7 +10,7 @@
 }
 
 .fire-poke-card, .water-poke-card, .grass-poke-card, .bug-poke-card, .flying-poke-card, .normal-poke-card, .dark-poke-card,
-.poison-poke-card, .electric-poke-card, .ghost-poke-card, .ground-poke-card{
+.poison-poke-card, .electric-poke-card, .ghost-poke-card, .ground-poke-card, .fairy-poke-card{
     width: 200px;
     padding: 5px;
 
@@ -26,7 +26,7 @@
 }
 
 .grass-type, .poison-type, .fire-type, .flying-type, .water-type, .bug-type, .dragon-type, .normal-type, .psychic-type,
-.fighting-type, .dark-type, .rock-type, .ground-type, .electric-type, .steel-type, .ghost-type{
+.fighting-type, .dark-type, .rock-type, .ground-type, .electric-type, .steel-type, .ghost-type, .fairy-type{
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -39,7 +39,7 @@
 /* hover dos cards */
 .fire-poke-card:hover, .water-poke-card:hover, .grass-poke-card:hover, .bug-poke-card:hover, .flying-poke-card:hover,
 .normal-poke-card:hover, .dark-poke-card:hover, .poison-poke-card:hover, .electric-poke-card:hover, .ghost-poke-card:hover,
-.ground-poke-card {
+.ground-poke-card:hover, .fairy-poke-card:hover{
     transform: scale(1.05);
     cursor: pointer;
 }
@@ -227,4 +227,19 @@
 
 .ghost-type{
     background: #7D7DC5;
+}
+
+/* fairy */
+.fairy-poke-card{
+    background: url(../images/backgrounds/fairy-background-fixed.png) center center;
+    background-size: cover;
+}
+
+.fairy-poke-card:hover{
+    background: url(../images/backgrounds/fairy-background.gif) center center;
+    background-size: cover;
+}
+
+.fairy-type{
+    background: #F1A8F1;
 }
