--- a/src/css/types.css
+++ b/src/css/types.css
@@ -11,7 +11,7 @@
 
 .fire-poke-card, .water-poke-card, .grass-poke-card, .bug-poke-card, .flying-poke-card, .normal-poke-card, .dark-poke-card,
 .poison-poke-card, .electric-poke-card, .ghost-poke-card, .ground-poke-card, .fairy-poke-card, .fighting-poke-card,
-.psychic-poke-card{
+.psychic-poke-card, .ice-poke-card{
     width: 200px;
     padding: 5px;
 
@@ -27,7 +27,7 @@
 }
 
 .grass-type, .poison-type, .fire-type, .flying-type, .water-type, .bug-type, .dragon-type, .normal-type, .psychic-type,
-.fighting-type, .dark-type, .rock-type, .ground-type, .electric-type, .steel-type, .ghost-type, .fairy-type{
+.fighting-type, .dark-type, .rock-type, .ground-type, .electric-type, .steel-type, .ghost-type, .fairy-type, .ice-type{
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -40,7 +40,7 @@
 /* hover dos cards */
 .fire-poke-card:hover, .water-poke-card:hover, .grass-poke-card:hover, .bug-poke-card:hover, .flying-poke-card:hover,
 .normal-poke-card:hover, .dark-poke-card:hover, .poison-poke-card:hover, .electric-poke-card:hover, .ghost-poke-card:hover,
-.ground-poke-card:hover, .fairy-poke-card:hover, .fighting-poke-card:hover, .psychic-poke-card:hover{
+.ground-poke-card:hover, .fairy-poke-card:hover, .fighting-poke-card:hover, .psychic-poke-card:hover, .ice-poke-card:hover{
     transform: scale(1.05);
     cursor: pointer;
 }
@@ -263,4 +263,19 @@
 
 .fairy-type{
     background: #F1A8F1;
+}
+
+/* ice */
+.ice-poke-card{
+    background: url(../images/backgrounds/ice-background-fixed.png) center center;
+    background-size: cover;
+}
+
+.ice-poke-card:hover{
+    background: url(../images/backgrounds/ice-background.gif) center center;
+    background-size: cover;
+}
+
+.ice-type{
+    background: #7DD4FF;
 }
