first-gen-rock-type

--- a/src/css/types.css
+++ b/src/css/types.css
@@ -11,7 +11,7 @@
 
 .fire-poke-card, .water-poke-card, .grass-poke-card, .bug-poke-card, .flying-poke-card, .normal-poke-card, .dark-poke-card,
 .poison-poke-card, .electric-poke-card, .ghost-poke-card, .ground-poke-card, .fairy-poke-card, .fighting-poke-card,
-.psychic-poke-card, .ice-poke-card{
+.psychic-poke-card, .ice-poke-card, .rock-poke-card{
     width: 200px;
     padding: 5px;
 
@@ -40,7 +40,8 @@
 /* hover dos cards */
 .fire-poke-card:hover, .water-poke-card:hover, .grass-poke-card:hover, .bug-poke-card:hover, .flying-poke-card:hover,
 .normal-poke-card:hover, .dark-poke-card:hover, .poison-poke-card:hover, .electric-poke-card:hover, .ghost-poke-card:hover,
-.ground-poke-card:hover, .fairy-poke-card:hover, .fighting-poke-card:hover, .psychic-poke-card:hover, .ice-poke-card:hover{
+.ground-poke-card:hover, .fairy-poke-card:hover, .fighting-poke-card:hover, .psychic-poke-card:hover, .ice-poke-card:hover,
+.rock-poke-card:hover{
     transform: scale(1.05);
     cursor: pointer;
 }
@@ -197,6 +198,16 @@
 }
 
 /* rock */
+.rock-poke-card{
+    background: url(../images/backgrounds/rock-background-fixed.png) center center;
+    background-size: cover;
+}
+
+.rock-poke-card:hover{
+    background: url(../images/backgrounds/rock-background.gif) center center;
+    background-size: cover;
+}
+
 .rock-type{
     background: #C5B77D;
 }
