--- a/src/css/dark_theme.css
+++ b/src/css/dark_theme.css
@@ -31,6 +31,6 @@
 
 .dark footer{
     background: var(--purple);
-    color: var(--dark);
+    color: var(--white);
     box-shadow: 0px 10px 40px var(--purple);
 }
