--- a/src/css/types.css
+++ b/src/css/types.css
@@ -9,9 +9,17 @@
     height: 15px;
 }
 
-.fire-poke-card, .water-poke-card, .grass-poke-card, .bug-poke-card, .flying-poke-card, .normal-poke-card, .dark-poke-card,
-.poison-poke-card, .electric-poke-card, .ghost-poke-card, .ground-poke-card, .fairy-poke-card, .fighting-poke-card,
-.psychic-poke-card, .ice-poke-card, .rock-poke-card, .dragon-poke-card{
+.poke-type{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 5px;
+
+    padding: 5px;
+    border-radius: 10px;
+}
+
+.poke-card{
     width: 200px;
     padding: 5px;
 
@@ -26,22 +34,8 @@
     transition: 0.2s ease-in;
 }
 
-.grass-type, .poison-type, .fire-type, .flying-type, .water-type, .bug-type, .dragon-type, .normal-type, .psychic-type,
-.fighting-type, .dark-type, .rock-type, .ground-type, .electric-type, .steel-type, .ghost-type, .fairy-type, .ice-type{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 5px;
-
-    padding: 5px;
-    border-radius: 10px;
-}
-
 /* hover dos cards */
-.fire-poke-card:hover, .water-poke-card:hover, .grass-poke-card:hover, .bug-poke-card:hover, .flying-poke-card:hover,
-.normal-poke-card:hover, .dark-poke-card:hover, .poison-poke-card:hover, .electric-poke-card:hover, .ghost-poke-card:hover,
-.ground-poke-card:hover, .fairy-poke-card:hover, .fighting-poke-card:hover, .psychic-poke-card:hover, .ice-poke-card:hover,
-.rock-poke-card:hover, .dragon-poke-card:hover{
+.poke-card:hover{
     transform: scale(1.05);
     cursor: pointer;
 }
